--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -36,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^1.2.2
   google_fonts: ^2.3.1
+  smooth_page_indicator: ^1.0.0+2
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +69,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/example/animation/coffee_login/
+    - assets/basic_widget/animated_cross_fade/hello_animated_cross_fade/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
