--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   lottie: ^1.2.2
   google_fonts: ^2.3.1
   smooth_page_indicator: ^1.0.0+2
   provider: ^6.0.2
+  http:
+  json_annotation:
+  badges: ^2.0.2
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +54,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
+  build_runner:
+  json_serializable:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
